fix windows scrollbar issue.

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -311,7 +311,6 @@
           list-style: none;
           margin-left: 20px;
           margin-right: 20px;
-          overflow: scroll;
 
           &.short {
             height: 230px;
